--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
 }
 
 .grid h1 {
-    font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: #57636e;
     font-size: 60px;
     text-align: center;
@@ -25,7 +25,7 @@ body {
 }
 
 .grid #question {
-    font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
     color: #5a6772;
 }
@@ -43,6 +43,20 @@ body {
     border-radius: 50px;
     margin: 10px 40px 10px 0px;
     padding: 10px 10px;
+}
+
+#progress {
+    color: #2b2b2b;
+    font-size: 18px;
+}
+
+#btn0:hover, #btn1:hover, #btn2:hover, #btn3:hover {
+    cursor: pointer;
+    background-color: #57636e;
+}
+
+#btn0:focus, #btn1:focus, #btn2:focus, #btn3:focus {
+    outline: 0;
 }
 
 
